@@ -1,0 +1,13 @@
+#pragma once
+
+#include "UserInterface/Components/MainPanel/StopWatch.h"
+
+class RunMode {
+
+	public:
+
+		virtual void switchedTo() {};
+
+		virtual void loop() {};
+
+};
